<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ngo</groupId>
  <artifactId>ngo-donation-platform</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.4</version>
    <relativePath/> <!-- lookup parent from Maven repo -->
  </parent>

  <!-- ✅ Only define extra versions not handled by Boot -->
  <properties>
    <java.version>17</java.version>
    <lombok.version>1.18.30</lombok.version>
    <postgresql.version>42.7.3</postgresql.version>
    <jjwt.version>0.12.5</jjwt.version>
  </properties>

  <!-- ✅ Manage only external dependency versions -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>

      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.kafka</groupId>
        <artifactId>spring-kafka</artifactId>
        <version>3.2.4</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-devtools</artifactId>
        <version>3.2.0</version>
        <optional>true</optional>
      </dependency>

      <dependency>
        <groupId>com.ngo</groupId>
        <artifactId>security-common</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt-api</artifactId>
        <version>${jjwt.version}</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt-impl</artifactId>
        <version>${jjwt.version}</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt-jackson</artifactId>
        <version>${jjwt.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>security-common</module>
    <module>user-service</module>
    <module>donation-service</module>
    <module>ngo-service</module>
    <module>admin-service</module>
  </modules>
</project>
